# lib/api-spec/openapi.yaml
@@ -1014,6 +1014,8 @@ components:
           type: boolean
         unidade:
           type: string
+        area:
+          type: ["string", "null"]
         position:
           type: ["string", "null"]
         managerId:
@@ -1042,6 +1044,8 @@ components:
           type: string
         unidade:
           type: string
+        area:
+          type: ["string", "null"]
         position:
           type: string
         managerId:
@@ -1064,6 +1068,8 @@ components:
           type: boolean
         unidade:
           type: string
+        area:
+          type: ["string", "null"]
         position:
           type: ["string", "null"]
         managerId:
